--- a/SkillsTest.html
+++ b/SkillsTest.html
@@ -59,7 +59,7 @@
 
         <!-- THE RIGHT SECTION -->
         <div class="col-12 col-sm-12 col-md-6 h-100">
-          <div id="myDIV">
+          <div class="panel bg-dark text-white">
             <div class="panel-body p-3">
                 <p id="Output"></p>
               </div>
