Added check/x icons

--- a/SkillsTest.html
+++ b/SkillsTest.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> 
   <script>
   </script>
+
 
 </head>
 <body>
@@ -27,13 +28,18 @@
                   <label class="control-label" for="name">
                     Name:
                   </label>
+                  <i class="fa fa-check-circle" aria-hidden="true"></i>
+                  <i class="fa fa-times-circle" aria-hidden="true"></i>
                   <input  class="form-control" type="text" id="name" name="name" />
+                  
                 </div>
                 <!-- Contact Number -->
                 <div class="form-group">
                   <label class="control-label" for="contactnumber">
                     Contact Number:
                   </label>
+                  <i class="fa fa-check-circle" aria-hidden="true"></i>
+                  <i class="fa fa-times-circle" aria-hidden="true"></i>
                   <input class="form-control" type="text" id="contactnumber" name="contactnumber"/>
                 </div>
                 <!-- Choose Theme -->
@@ -51,7 +57,10 @@
                   </div>
                 </div>
                 <!-- Submit Button -->
-                  <button  type="button" class="btn btn-success btn-sm" id="html" >Submit</button>
+                  <div class="button">
+                    <button type="button" class="btn btn-success btn-sm" id="html" >Submit</button>
+                  </div>
+                    
 
               </form>
             </div>
