Fixed position of icons

--- a/SkillsTest.html
+++ b/SkillsTest.html
@@ -9,6 +9,13 @@
   <script>
   </script>
 
+  <style>
+    .form-group i{
+      position:absolute;
+      padding-left: 8px;
+      padding-top: 5px;
+    }
+  </style>
 
 </head>
 <body>
