--- a/SkillsTest.html
+++ b/SkillsTest.html
@@ -14,6 +14,25 @@
       position:absolute;
       padding-left: 8px;
       padding-top: 5px;
+      visibility: hidden;
+    }
+
+    .form-group.success input{
+      border-color: #2ecc71;
+    }
+
+    .form-group.error input{
+      border-color: #e74c3c;
+    }
+
+    .form-group.success i.fa-check-circle{
+      visibility:visible;
+      color: #2ecc71;
+    }
+
+    .form-group.form-group.error i.fa-times-circle{
+      visibility:visible;
+      color: #e74c3c;
     }
   </style>
 
@@ -31,7 +50,7 @@
                     Contact Details
                  </h3>
                 <!-- Name -->
-                <div class="form-group">
+                <div class="form-group success">
                   <label class="control-label" for="name">
                     Name:
                   </label>
@@ -41,7 +60,7 @@
                   
                 </div>
                 <!-- Contact Number -->
-                <div class="form-group">
+                <div class="form-group error">
                   <label class="control-label" for="contactnumber">
                     Contact Number:
                   </label>
